--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "eslint-plugin-react": "^7.37.5",
     "i18n-iso-countries": "^7.14.0",
     "json-server": "^0.17.4",
+    "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.10.1",
     "vite-plugin-eslint": "^1.8.1"
   },
