--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "json-server": "^0.17.4",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
+    "react-datepicker": "^9.0.0",
+    "react-datetime-picker": "^7.0.1",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.10.1",
